# CLMM-Solana-basic

./: Dockerfile  README.md  package.json
clmm program/: Anchor.toml  package-lock.json
clmm program/tests/: anchor.ts  anchor2.ts  anchor4.ts
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  nav.tsx  page.tsx  providers.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/decrease-liquidity/: page.tsx
frontend/src/app/hellothere/: page.tsx
frontend/src/app/increase-liquidity/: page.tsx
frontend/src/app/liquidity-calculate/: page.tsx
frontend/src/app/open-position/: page.tsx
frontend/src/app/pools/: page.tsx
frontend/src/components/: CreatePool.tsx  FetchPools.tsx  hellothere.tsx
frontend/src/components/DecreaseLiquidity/: DecreaseLiquidityPage.tsx  types.ts  useDecreaseLiquidity.ts
frontend/src/components/IncreaseLiquidity/: types.ts  (+2 more)
frontend/src/idl/: clmm_basic.json
frontend/src/types/: clmm_basic.ts
frontend/src/utils/: pda.ts  program.ts
programs/clmm_basic/: Cargo.toml
programs/clmm_basic/src/: lib.rs
programs/clmm_basic/src/errors/: errors.rs  mod.rs
programs/clmm_basic/src/instructions/: add_liquidity.rs  decrease_liquidity.rs  mod.rs  open_position.rs  swap.rs
programs/clmm_basic/src/libraries/: big_num.rs  liquidity_math.rs  mod.rs  swap_math.rs  tick_math.rs
programs/clmm_basic/src/states/: mod.rs  tick_array.rs
programs/clmm_basic/src/util/: account_load.rs  token.rs
tests/: anchor.ts  anchor2.ts  anchor3.ts
(+21 files in other folders)
